Version: 1.22.0
Date: 2024-??-??

  Features:
    - Added rally point support to army unit deployers
    - Added custom UI to handle rally point and deploy active toggle when you open army unit deployers UI.

  Changes:
    - Added surface and type filter to Deployer UI
    - Added surface filter to Teleport UI


---------------------------------------------------------------------------------------------------
Version: 1.21.12
Date: 2024-07-10

  Bugfixes:
    - Fix a crash when boss performs an attack in artillery_mode.
    - Fix a crash when enemy level up with a boss on the field.

---------------------------------------------------------------------------------------------------
Version: 1.21.11
Date: 2024-07-08

  Modding:
    - Added warning message that "ERM - Terran Units for Players - but easier" will become incompatible in 1.22.
    - The improper fork has caused multiple instances of game crashes.

---------------------------------------------------------------------------------------------------
Version: 1.21.10
Date: 2024-07-01

  Bugfixes:
    - Fixed a crash when disabled "biter" force try to spawn a scout.

---------------------------------------------------------------------------------------------------
Version: 1.21.9
Date: 2024-06-30

  Bugfixes:
    - Fixed a crash that caused by heat processor picked up a null surface on a recently deleted planet in Space Exploration.

---------------------------------------------------------------------------------------------------
Version: 1.21.8
Date: 2024-06-29

  Modding:
    - Simplified compatibility control.lua workflow for 3rd party integration.
    - add_*_to_tier() and remove_*_from_tier() in race_settings_helper are deprecated.

---------------------------------------------------------------------------------------------------
Version: 1.21.7
Date: 2024-06-28

  Bugfixes:
    - Fixed a crash that caused by calculating heat on unsupported force, resulting a nil race_name.