@@ -206,8 +206,8 @@ boss-base-spawn-at=Boss Spawned at __1__
 boss-despawn-in=Despawn In: __1__
 
 [gui]
-hide-enemy-stats=Hide Enemy Race Stats
-show-enemy-stats=Show Enemy Race Stats
+hide-enemy-stats=Hide Enemy Race Stats __CONTROL__erm-open-stat-window__
+show-enemy-stats=Show Enemy Race Stats __CONTROL__erm-open-stat-window__
 title=Enemy Race Manager __CONTROL__erm-open-stat-window__
 race_column=Race
 level_column=Level
